# cuda_aruco

./: .gitignore  CMakeLists.txt  config.cmake.in
src/: CMakeLists.txt  boarddetector.cpp  cudaImage.cu  cudaImage.h  cuda_aruco.cu  cuda_aruco.h  markerdetector.cpp  markerdetector.h
utils/: CMakeLists.txt  aruco_board_pix2meters.cpp  aruco_calibration.cpp  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_selectoptimalmarkers.cpp  aruco_simple.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_board_gl_mask.cpp
utils_hrm/: aruco_hrm_create_board.cpp  aruco_hrm_create_dictionary.cpp  aruco_hrm_test.cpp  aruco_hrm_test_board.cpp
